--- a/style.css
+++ b/style.css
@@ -231,11 +231,12 @@ hr {
 
   .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    height: 100%;
   }
   
   .left{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100vw;
     height: 100%;
     /* margin-top: -100%; */
